# rag-eval-harness

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: gold.jsonl
docs/: blog-notes.md
docs/superpowers/plans/: 2026-06-24-rag-eval-harness.md
docs/superpowers/specs/: 2026-06-24-rag-eval-harness-design.md
eval/: citation_metric.py  claude_judge.py  gold.py  metrics.py  retrieval_metrics.py  run_matrix.py  test_rag.py
rag/: chunk.py  embed.py  generate.py  ingest.py  pipeline.py  retrieve.py  store.py
results/: generation.csv  generation.md  retrieval.csv  retrieval.md
scripts/: build_index.py  capture_screenshot.py  synthesize_gold.py
tests/: test_chunk.py  test_citation_metric.py  test_config.py  test_embed.py  test_generate.py  test_gold.py  test_ingest.py  test_metrics.py  test_pipeline.py  test_retrieval_metrics.py  test_retrieve.py  test_run_matrix.py  test_store.py
