[project]
name = "rag-eval-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "pymupdf>=1.24",
  "sentence-transformers>=3.0",
  "rank-bm25>=0.2.2",
  "chromadb>=0.5",
  "deepeval>=1.0",
  "streamlit>=1.36",
  "python-dotenv>=1.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
# playwright is only for scripts/capture_screenshot.py — after install, run `playwright install chromium`
dev = ["pytest>=8.0", "playwright>=1.40"]

[tool.setuptools]
py-modules = ["config"]
packages = ["rag", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
